@@ -13,6 +13,8 @@
     <script type = "text/javascript" src="{% static '/js/main.js' %}"></script>
     <title>OLMS Lite</title>
 
+
+
 </head>
 <body>
   <header id="titlebar">
