@@ -2,6 +2,11 @@
 {% load static %}
 {% block content %}
 
+    <noscript>
+            <style>html{display:none;}</style>
+            <meta http-equiv="refresh" content="0.0;url={% url 'index'  %}">
+        </noscript>
+
 {% if user.role == 2 %}
     <a href="{% url 'course_page' id=course.id %}"><i class="fa fa-arrow-left" style="font-size:24px"></i> {{ course.course_name }}</a>
     <h1>Homework</h1>
