@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
+    <noscript>
+            <style>html{display:none;}</style>
+            <meta http-equiv="refresh" content="0.0;url={% url 'index'  %}">
+        </noscript>
     <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% for Question in questions %}
@@ -48,5 +52,6 @@
         <hr>
     {% endfor %}
     <input type="submit" value="Submit" name="quiz_submit">
+    <script type = "text/javascript" src="{% static '/js/disableBack.js' %}"></script>
     </form>
 {% endblock content %}
