@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <noscript>
+            <style>html{display:none;}</style>
+            <meta http-equiv="refresh" content="0.0;url={% url 'index'  %}">
+        </noscript>
     <a href="{% url 'assignment_list' cid=grade.assignment.course_id.id %}"><i class="fa fa-arrow-left" style="font-size:24px"></i>Grades</a>
 
     <form method="post">
