@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <noscript>
+            <style>html{display:none;}</style>
+            <meta http-equiv="refresh" content="0.0;url={% url 'index'  %}">
+        </noscript>
     {% if user.role == 2 %}
     <h1>Survey List</h1><br>
     <table class="w3-table-all w3-centered">
@@ -13,7 +17,7 @@
     {% for Survey in survey %}
         {% if Survey in course.surveys.all %}
             <tr>
-                <td class="cSurveyList"><a id = '{{ Survey.id }}' href="{% url 'survey_list' cid=course.id %}">{{ Survey.assignment_name}}</a></td>
+                <td class="cSurveyList"><a id = '{{ Survey.id }}' href="{% url 'pre_survey' cid=Survey.course_id.id id=Survey.id %}">{{ Survey.assignment_name}}</a></td>
                 <td class="cStartDate">{{ Survey.open_date }}</td>
                 <td class="cDueDate">{{ Survey.due_date }}</td>
             </tr>
